[package]
name = "rust_i2c"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.*", features = ["ioctl", "time"] }
sysfs_gpio = "0.6.*"

# Specify the library target
[lib]
name = "rust_i2c"
path = "lib/i2c-lib.rs"

# Specify the binary target
[[bin]]
name = "gy-521"
path = "bin/gy-521.rs"

[[bin]]
name = "mpr121-keypad"
path = "bin/mpr121-keypad.rs"

[[bin]]
name = "hc-sr04"
path = "bin/hc-sr04.rs" 

[[bin]]
name = "hc-sr501"
path = "bin/hc-sr501.rs" 